--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,57 @@
-.App {
-  font-family: sans-serif;
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
+
+body > * {
+  box-sizing: border-box;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+#root > * {
+  box-sizing: border-box;
+}
+
+:root {
+  --backgroundPurple: #800080;
+  --textColor: #f6f5f7;
+}
+
+.window {
+  background-color: var(--backgroundPurple);
+  height: 100%;
+  padding: 0.5em;
+}
+
+.app {
+  background-color: var(--backgroundPurple);
+  border-radius: 25px;
+  background: linear-gradient(225deg, #730073, #890089);
+  box-shadow: -41px 41px 100px #330033, 41px -41px 100px #330033;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  margin: 0 auto;
+  max-width: 768px;
   text-align: center;
+  width: 100%;
+}
+
+.app > * {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.heading {
+  color: var(--textColor);
+  margin-top: 0;
+  padding-top: 1em;
+}
+
+.search {
+  width: 75%;
 }
