--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,7 @@ body > * {
 
 :root {
   --backgroundPurple: #800080;
+  --borderColor: #000;
   --textColor: #f6f5f7;
 }
 
@@ -32,26 +33,91 @@ body > * {
 .app {
   background-color: var(--backgroundPurple);
   border-radius: 25px;
+  box-sizing: border-box;
   background: linear-gradient(225deg, #730073, #890089);
   box-shadow: -41px 41px 100px #330033, 41px -41px 100px #330033;
-  font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   margin: 0 auto;
   max-width: 768px;
-  text-align: center;
+  overflow: hidden;
   width: 100%;
 }
 
-.app > * {
+.app__content {
+  box-sizing: border-box;
+  height: 100%;
+  margin: 0 auto;
+  padding: 1em 0;
+  width: 75%;
+}
+
+.app__content > * {
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .heading {
   color: var(--textColor);
   margin-top: 0;
-  padding-top: 1em;
+  padding-top: 0.5em;
+  text-align: center;
 }
 
 .search {
-  width: 75%;
+  border-radius: 3px;
+  padding: 0.75em;
+  border: none;
+  font-size: 1em;
+  font-weight: normal;
+  width: 100%;
+}
+
+.search-results {
+  border: 0.5px solid var(--borderColor);
+  max-height: 85%;
+  margin: 1em 0;
+  overflow: auto;
+  text-align: left;
+}
+
+.search-results .search-results__hr {
+  border: 0.5px solid var(--borderColor);
+  width: 95%;
+}
+
+.search-result {
+  align-items: center;
+  border-radius: 5px;
+  display: flex;
+  margin: 0.5em 0;
+  padding: 0.25em;
+}
+
+.search-result:first-child {
+  margin-top: 0;
+}
+
+.search-result:last-child {
+  margin-bottom: 0;
+}
+
+.search-result:hover {
+  opacity: 0.75;
+}
+
+.search-result__image {
+  margin-right: 1em;
+}
+
+.search-result__name {
+  --skillColor: #afd2e9;
+  color: var(--skillColor);
+  text-transform: uppercase;
+  margin-right: 1em;
+  max-width: 125px;
+  min-width: 125px;
+}
+
+.search-result__description {
+  color: var(--textColor);
 }
