--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,9 @@ body > * {
 :root {
   --backgroundPurple: #800080;
   --borderColor: #000;
+  /* --skillColor: #afd2e9; */
+  --skillColor: #93cef5;
+  --subHeadingColor: #bfbfc8;
   --textColor: #f6f5f7;
 }
 
@@ -59,14 +62,13 @@ body > * {
 
 .heading {
   color: var(--textColor);
-  margin-top: 0;
+  margin: 0;
   padding-top: 0.5em;
   text-align: center;
 }
 
 .sub-heading {
-  color: #bfbfc8;
-
+  color: var(--subHeadingColor);
   margin-top: 0;
   padding-top: 0.5em;
   text-transform: uppercase;
@@ -81,28 +83,41 @@ body > * {
   width: 100%;
 }
 
-.search-results {
-  border: 0.5px solid var(--borderColor);
-  border-radius: 3px;
+.search-results__container {
+  box-sizing: border-box;
+  height: 100%;
   max-height: 85%;
-  margin: 1em 0;
+  margin: 1em 0 4em;
+  padding: 0.5em 0 4em;
+  overflow: hidden;
+  width: 100%;
+}
+
+.search-results__list {
+  border: 1px solid var(--borderColor);
+  border-radius: 3px;
+  box-sizing: border-box;
+  list-style: none;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   overflow: auto;
   text-align: left;
   width: 100%;
 }
 
-.search-results .search-results__hr {
+.search-results__hr {
   border: 0.5px solid var(--borderColor);
-  width: 95%;
+  margin: 0 1em;
 }
 
 .search-result {
   align-items: center;
-  border-radius: 5px;
+  box-sizing: border-box;
   display: flex;
-  margin: 0.5em 0;
-  padding: 0.25em;
-  width: 95%;
+  margin: 0;
+  padding: 0.75em 1em;
+  width: 100%;
 }
 
 .search-result:first-child {
@@ -113,20 +128,15 @@ body > * {
   margin-bottom: 0;
 }
 
-.search-result:hover .search-result__image {
-  opacity: 0.75;
+.search-result:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .search-result__image {
   margin-right: 1em;
 }
 
-.search-result:hover .search-result__name {
-  opacity: 0.75;
-}
-
 .search-result__name {
-  --skillColor: #afd2e9;
   color: var(--skillColor);
   text-transform: uppercase;
   margin-right: 1em;
@@ -138,7 +148,6 @@ body > * {
   color: var(--textColor);
   display: flex;
   flex-direction: column;
-  padding-top: 0.5em;
   justify-content: center;
 }
 
@@ -148,5 +157,10 @@ body > * {
 }
 
 .search-result__list {
+  list-style-type: disc;
   margin-top: 0;
+}
+
+.search-result__cure.is-result {
+  color: var(--skillColor);
 }
