--- a/src/components/search-result.css
+++ b/src/components/search-result.css
@@ -1,11 +1,14 @@
 .search-result {
   align-items: flex-start;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
   box-sizing: border-box;
   display: flex;
   height: 100%;
   margin: 0;
+  overflow: hidden;
   padding: 0.75em 1em;
   position: relative;
+  transition: height 0.1s, box-shadow 0.1s;
   width: 100%;
 }
 
@@ -18,7 +21,8 @@
 }
 
 .search-result:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  height: 110%;
+  box-shadow: 20px 20px 40px 0px rgba(0, 0, 0, 0.5);
 }
 
 .search-result__image {
