--- a/src/components/search-result.css
+++ b/src/components/search-result.css
@@ -1,6 +1,5 @@
 .search-result {
   align-items: flex-start;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
   box-sizing: border-box;
   display: flex;
   height: 100%;
@@ -21,8 +20,13 @@
 }
 
 .search-result:hover {
-  height: 110%;
+  border-top: 1px solid black;
   box-shadow: 20px 20px 40px 0px rgba(0, 0, 0, 0.5);
+  height: 110%;
+}
+
+.search-result:hover + .bottom-border {
+  opacity: 0;
 }
 
 .search-result__image {
@@ -31,10 +35,10 @@
 
 .search-result__name {
   color: var(--skillColor);
-  text-transform: uppercase;
   margin: 0 1em 0 0;
   max-width: 125px;
   min-width: 125px;
+  text-transform: uppercase;
 }
 
 .search-result__description {
@@ -53,6 +57,10 @@
   list-style-type: disc;
   margin-top: 0;
   padding-inline-start: 30px;
+}
+
+.search-result__cure {
+  text-transform: capitalize;
 }
 
 .search-result__cure.is-result {
