--- a/src/components/search-results.css
+++ b/src/components/search-results.css
@@ -30,23 +30,10 @@
   margin-right: 1em;
 }
 
-.fade-out {
-  -webkit-mask-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 1)),
-    to(rgba(0, 0, 0, 0))
-  );
-  mask-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 1)),
-    to(rgba(0, 0, 0, 0))
-  );
-  bottom: 0;
-  height: calc(152px / 2);
-  position: absolute;
-  width: 100%;
+.bottom-border {
+  border-bottom: 1px solid black;
+  margin: 0 auto;
+  opacity: 1;
+  transition: opacity 0.1s;
+  width: 95%;
 }
