--- a/src/components/search-result.css
+++ b/src/components/search-result.css
@@ -1,13 +1,19 @@
 .search-result {
+  --searchResultPaddingX: 1em;
+  --searchResultPaddingY: 0.75em;
+  --searchResultTransitionTiming: 0.1s;
+
   align-items: flex-start;
   box-sizing: border-box;
   display: flex;
   height: 100%;
   margin: 0;
   overflow: hidden;
-  padding: 0.75em 1em;
+  padding: var(--searchResultPaddingY) var(--searchResultPaddingX);
   position: relative;
-  transition: height 0.1s, box-shadow 0.1s;
+  transition: box-shadow var(--searchResultTransitionTiming),
+    margin var(--searchResultTransitionTiming),
+    padding var(--searchResultTransitionTiming);
   width: 100%;
 }
 
@@ -20,9 +26,10 @@
 }
 
 .search-result:hover {
-  border-top: 1px solid black;
-  box-shadow: 20px 20px 40px 0px rgba(0, 0, 0, 0.5);
-  height: 110%;
+  box-shadow: 10px 10px 40px 6px rgba(0, 0, 0, 0.5);
+  margin: 0 0.1em;
+  --searchResultPaddingX--Hover: 1.1em;
+  padding: var(--searchResultPaddingY) var(--searchResultPaddingX--Hover);
 }
 
 .search-result:hover + .bottom-border {
