--- a/src/components/search-results.css
+++ b/src/components/search-results.css
@@ -16,7 +16,8 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   text-align: left;
   width: 100%;
 }
